name:                crayon-hs
version:             0.1.0.0
synopsis:            Haskell client to crayon
description:         Enables tensorboard visualizations from Haskell through a REST API
homepage:            https://github.com/githubuser/crayon-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Austin Huang
maintainer:          austinh .. at .. alum dot mit dot edu
copyright:           2017 Austin Huang
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable crayon-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.2
                     , attoparsec >= 0.13
                     , aeson >= 1.1.2.0
                     , http-client >= 0.5.7.0
                     , http-media >= 0.7.1.1
                     , lens >= 4.15.4
                     , servant >= 0.11
                     , servant-client >= 0.11
                     , string-conversions >= 0.4
                     , text >= 1.2.2.2
